//
//  crosskit_example_iosUITests.swift
//  crosskit-example-iosUITests
//
//  Created by zigengm3 on 2026/2/4.
//

import XCTest

final class crosskit_example_iosUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
        app.buttons["counter.increment"].tap()

        app.buttons["list.append"].tap()
        app.buttons["list.insert"].tap()
        app.buttons["list.update"].tap()
        app.buttons["list.move"].tap()
        app.buttons["list.sort"].tap()
        app.buttons["list.remove"].tap()
    }

    @MainActor
    func testLaunchPerformance() throws {
        // This measures how long it takes to launch your application.
        measure(metrics: [XCTApplicationLaunchMetric()]) {
            XCUIApplication().launch()
        }
    }

    
}
